kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealership-service
  namespace: dealership
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
  type: NodePort
  selector:
    app: vehicle-dealership
