kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dealership-ingress
  namespace: dealership
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dndealership.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dealership-service
                port:
                  number: 80
